# rz-ghidra

./: .gitignore  .gitmodules  .mergify.yml  .travis.yml  .trivas.yml  CMakeLists.txt  README.md  rz_ghidra.pc.in  scr
.builds/: freebsd.yml  openbsd.yml
.github/: vsdevenv.ps1
.github/workflows/: ci.yml  codeql-analysis.yml  coverity-scan.yml  dist.yml  jessie.yml  linter.yml  windows.yml
.reuse/: dep5
cmake/: FindCutter.cmake  FindRadare2.cmake  FindRizin.cmake  RizinPlugin.cmake
cutter-plugin/: CMakeLists.txt  R2GhidraDecompiler.cpp  R2GhidraDecompiler.h  R2GhidraPlugin.cpp  R2GhidraPlugin.h  RzGhidraDecompiler.cpp  RzGhidraDecompiler.h  RzGhidraPlugin.cpp  RzGhidraPlugin.h
ghidra/: CMakeLists.txt
scripts/: Dockerfile.arch  Dockerfile.buster  Dockerfile.jessie  build.sh  ci-script  msys_build.sh
scripts/debian/: CONFIG  DESCR  Makefile
src/: AnnotatedCode.c  AnnotatedCode.h  ArchMap.cpp  ArchMap.h  CodeXMLParse.cpp  CodeXMLParse.h  PcodeFixupPreprocessor.cpp  PcodeFixupPreprocessor.h  PrettyXmlEncode.cpp  PrettyXmlEncode.h  R2Architecture.cpp  R2Architecture.h  R2CommentDatabase.cpp  R2CommentDatabase.h  R2Emit.cpp  R2Emit.h  R2LoadImage.cpp  R2LoadImage.h  R2PrintC.cpp  R2PrintC.h  R2Printc.cpp  R2Printc.h  R2Scope.cpp  R2Scope.h  R2TypeFactory.cpp  R2TypeFactory.h  R2Utils.h  RAnnotatedCode.h  RCoreMutex.cpp  RCoreMutex.h  RizinArchitecture.cpp  RizinArchitecture.h  RizinCommentDatabase.cpp  RizinCommentDatabase.h  RizinLoadImage.cpp  RizinLoadImage.h  RizinPrintC.cpp  RizinPrintC.h  RizinScope.cpp  RizinScope.h  (+34 more)
test/: .gitignore  Makefile  package.json
test/bins/: Makefile  dectest.c  dectest32  dectest32-sp  dectest64  dectest64-sp  hello-arm  jni-simplified.h  rec  rec.c  sharedReturn.c  strings  strings.c  types.h  types_rec.h
test/db/extras/: anal_ghidra  analysis_ghidra  asm_ghidra  ghidra  r2ghidra
